separating html css and js into separate files

--- a/load-stgl/index.html
+++ b/load-stgl/index.html
@@ -15,52 +15,8 @@
     />
     <script src="https://js.arcgis.com/4.20/"></script>
 
-    <style>
-      html,
-      body,
-      #viewDiv {
-        padding: 0;
-        margin: 0;
-        height: 100%;
-        width: 100%;
-      }
-    </style>
-
-    <script>
-      require([
-        "esri/Map",
-        "esri/views/MapView",
-        "esri/layers/SubtypeGroupLayer",
-        "esri/widgets/LayerList"
-      ], (Map, MapView, SubtypeGroupLayer, LayerList) => {
-
-        const map = new Map({
-          basemap: "topo"
-        });
-
-        const view = new MapView({
-          container: "viewDiv",
-          map: map,
-          zoom: 4,
-          center: [-90, 34]
-        });
-
-        // initializing a SubtypeGroupLayer
-        const stgl = new SubtypeGroupLayer({
-          url: "https://services.arcgis.com/V6ZHFr6zdgNZuVG0/ArcGIS/rest/services/MarineLife/FeatureServer/0",
-          outFields: ['*']
-        });
-
-        map.add(stgl);
-
-        // initializing the LayerList widget
-        const layerList = new LayerList({
-          view: view
-        });
-        // add the widget to the view
-        view.ui.add(layerList, "top-right");
-      });
-    </script>
+    <link rel="stylesheet" href="./styles.css" />
+    <script src="./app.js"></script>
   </head>
 
   <body>
